- comments added on running application to README.md